# File2JSON

./: .gitignore  README.md
converter_tool/: LICENSE  README.md  __init__.py  base_converter.py  cli.py  main.py  processor.py  pyproject.toml  pyvenv.cfg  registry.py  requirements.txt  utils.py
converter_tool/converters/: __init__.py  archive_converter.py  binary_converter.py  csv_converter.py  docx_converter.py  evtx.py  json_converter.py  pcap.py  pdf_converter.py  text_converter.py  xml_converter.py
converter_tool/tests/: __init__.py  test_csv.py  test_integration.py  test_json.py  test_text.py  test_utils.py  test_xml.py
converter_tool/tests/fixtures/: sample.csv  sample.json  sample.txt  sample.xml
